Track turtlecoin-wiki import-api-docs branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,5 @@
 [submodule "turtlecoin-wiki"]
+  branch = import-api-docs
 	path = turtlecoin-wiki
 	url = https://github.com/ar-x/turtlecoin-wiki.git
   ignore = dirty
